--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,6 @@ html {
   text-transform: uppercase;
   font-style: italic;
   color: white;
-  margin-left: 50px;
 }
 
 li {
@@ -163,6 +162,11 @@ header .container ul li {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.container .player div video {
+  width: 100%;
+  height: 80%;
 }
 
 .container .player p {
