--- a/src/App.css
+++ b/src/App.css
@@ -182,13 +182,14 @@ header .container ul li {
 .container .player div .mask .item {
   position: relative;
   width: 33%;
+  display: flex;
 }
 
 .container .player div .mask .item span {
   position: absolute;
   width: 100%;
   height: 132px;
-  top: 0;
+  top: 20%;
   color: white;
   font-size: 35px;
   font-weight: bold;
